// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingPlaceholder renders a circular loading placeholder with medium size 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__circle-medium"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a circular loading placeholder with small size 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__circle-small"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a loading placeholder with large width and medium height 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__width-large raft__loading-placeholder__height-medium"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a loading placeholder with large width and small height 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__width-large raft__loading-placeholder__height-small"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a loading placeholder with medium width and medium height 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__width-medium raft__loading-placeholder__height-medium"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a loading placeholder with medium width and small height 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__width-medium raft__loading-placeholder__height-small"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a loading placeholder with small width and medium height 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__width-small raft__loading-placeholder__height-medium"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a loading placeholder with small width and small height 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__width-small raft__loading-placeholder__height-small"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a loading placeholder with tiny width and medium height 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__width-tiny raft__loading-placeholder__height-medium"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;

exports[`LoadingPlaceholder renders a loading placeholder with tiny width and small height 1`] = `
<div>
  <div
    class="raft__loading-placeholder raft__loading-placeholder__width-tiny raft__loading-placeholder__height-small"
  >
    <div
      class="raft__loading-placeholder__bar"
    />
  </div>
</div>
`;
